iptables-rules.v4
# Generated by iptables-save v1.6.1 on Wed Jun 20 21:45:12 2018
*filter
:INPUT DROP [152:124268]
:FORWARD ACCEPT [3504:1609925]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -p tcp -m tcp --dport 4711:4720 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 220 -j ACCEPT
-A INPUT -p udp -m udp --dport 500 -j ACCEPT
-A INPUT -p udp -m udp --dport 1701 -j ACCEPT
-A INPUT -p udp -m udp --dport 4500 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 992 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5555 -j ACCEPT
-A INPUT -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p udp -m udp --dport 68 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
-A INPUT -s 130.158.0.0/16 -m state --state NEW -j DROP
-A OUTPUT -j ACCEPT
-A OUTPUT -d 130.158.0.0/16 -p udp -j DROP
COMMIT
# Completed on Wed Jun 20 21:45:12 2018
# Generated by iptables-save v1.6.1 on Wed Jun 20 21:45:12 2018
*nat
:PREROUTING ACCEPT [14:2450]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:65]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i tap_+ -p tcp -m tcp --dport 53 -j DNAT --to-destination 192.168.101.101
-A PREROUTING -i tap_+ -p udp -m udp --dport 53 -j DNAT --to-destination 192.168.101.101
-A POSTROUTING -o v100 -j MASQUERADE
COMMIT
# Completed on Wed Jun 20 21:45:12 2018
